# smart-commit

./: Cargo.toml  README.md
src/: main.rs
